# list-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  branches.json  config.py  main.py  main.spec.example  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml  version.yml
app/: pdf_app.py
app/core/: branch_service.py  html_pdf_renderer.py  lot_pdf_service.py  pdf_generator_service.py  ranking_service.py  start_clock_pdf_service.py  text_processing_service.py
app/dto/: branch.py  settings_dto.py
app/gui/: branches_scene.py  main_scene.py  pdf_app.py  settings_scene.py
app/gui/components/: collapsible_row.py  menu.py
app/gui/dialogs/: about.py
app/templates/: start_clock_template.html
app/utils/: file_utils.py  global_config.py  logger.py  notifier.py  resource_helper.py  ui_state.py  validator.py
components/: menu.py  tooltip.py
data/: STERDRUK.TXT
dto/: settings_dto.py
scenes/: branches_scene.py  main_scene.py  paths_scene.py
service/: pdf_generator.py
services/: pdf_generator.py
templates/: pdf_template.html
tests/: conftest.py
tests/app/core/: test_branch_service.py  test_html_pdf_renderer.py  test_league2.py  test_lot_pdf_service.py  test_pdf_generator_service.py  test_pdf_layout.py  test_start_clock_pdf_service.py  test_text_processing_service.py
tests/app/dto/: test_settings_dto.py
tests/app/gui/: test_gui_smoke.py
tests/app/utils/: test_file_utils.py  test_resource_helper.py  test_ui_state.py  test_validator.py
utils/: logger.py  notifier.py  storage.py
