[project]
name = "list-generator"
version = "0.1.0"
description = "A tool for generating PDFs with cp852 and utf-8 handling"
requires-python = ">=3.8,<3.9"

dependencies = [
    "pdfkit",
    "chardet"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
